--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@storybook/addon-knobs": "^5.0.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
@@ -15,7 +16,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "chromatic": "CHROMATIC_APP_CODE=b26w43jp25t chromatic test"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,7 +41,9 @@
     "@storybook/addon-storyshots": "^5.0.11",
     "@storybook/addons": "^5.0.11",
     "@storybook/react": "^5.0.11",
+    "babel-loader": "^8.0.6",
     "react-test-renderer": "^16.8.6",
-    "require-context.macro": "^1.0.4"
+    "require-context.macro": "^1.0.4",
+    "storybook-chromatic": "^1.3.3"
   }
 }
